--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -31,7 +31,8 @@
     width: 70px;
     height: 70px;
     left: 30px;
-    top: 10px;    
+    top: 10px; 
+    z-index: 10;   
 }
 .languageOptin{
     position:absolute;
