--- a/src/pages/login/index.css
+++ b/src/pages/login/index.css
@@ -1,19 +1,22 @@
+.mergeImg{
+  max-height: 440px;
+  border-radius: 5%;
+}
 .logo img {
   width: 35%;
 }
 .login-sm img {
   width: 56%;
 }
-
+.login-color {
+  background: linear-gradient(180deg, #fdd106 0%, #fda906 100%);
+}
 .login-main {
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 18rem;
-}
-.login-color {
-  background: linear-gradient(180deg, #fdd106 0%, #fda906 100%);
+  margin-top: 150px;
 }
 
 .welcome {
@@ -25,31 +28,29 @@
   border-radius: 0rem 2rem 2rem 0rem;
   box-shadow: 1px 6px 21px -3px grey;
   position: absolute;
-  right: 55.4%;
   border: none;
   top: 3%;
 }
 
 .login-icon {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   background: black;
   border-radius: 2rem 0 2rem 2rem;
   padding: 7px 15px;
   position: absolute;
-  z-index: 99;
-  left: 21%;
+  z-index: 9;
+  left: 115px;
 }
 
 .login-box input {
-  width: 60%;
-  height: 50px;
+  width: 300px;
+  height: 45px;
   padding: 7px 55px;
   border-radius: 2rem;
   position: relative;
   border: none;
 }
-
 .login-box input::placeholder {
   padding-left: 3rem;
 }
@@ -64,74 +65,9 @@
 .login-btn button:hover {
   color: white;
 }
-
 .login-image img {
   height: 258px;
 }
-
-@media (max-width: 768px) {
-  .login-sm img {
-    width: 100%;
-  }
-
-  .logo img {
-    width: 70%;
-  }
-  .welcome {
-    background: rgba(253, 209, 6, 1);
-    border: 1px solid;
-    padding: 0.6rem;
-    width: 260px;
-    text-align: center;
-    border-radius: 0rem 2rem 2rem 0rem;
-    box-shadow: 1px 6px 21px -3px grey;
-    position: absolute;
-
-    left: 0%;
-    border: none;
-    top: 3%;
-  }
-
-  .login-main {
-    margin-top: 10rem;
-  }
-
-  .login-image img {
-    height: auto;
-    margin-top: -20px;
-  }
-}
-
-@media (max-width: 992px) {
-  .welcome {
-    background: rgba(253, 209, 6, 1);
-    border: 1px solid;
-    padding: 0.6rem;
-    width: 260px;
-    text-align: center;
-    border-radius: 0rem 2rem 2rem 0rem;
-    box-shadow: 1px 6px 21px -3px grey;
-    position: absolute;
-
-    left: 0%;
-    border: none;
-    top: 3%;
-  }
-}
-
-@media (max-width: 1400px) {
-  .welcome {
-    background: rgba(253, 209, 6, 1);
-    border: 1px solid;
-    padding: 0.6rem;
-    width: 260px;
-    text-align: center;
-    border-radius: 0rem 2rem 2rem 0rem;
-    box-shadow: 1px 6px 21px -3px grey;
-    position: absolute;
-
-    left: 0%;
-    border: none;
-    top: 3%;
-  }
-}
+.errors{
+  color: red;
+} 
