--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -35,7 +35,8 @@
     width: 70px;
     height: 70px;
     left: 30px;
-    top: 10px;    
+    top: 10px; 
+    z-index: 50;   
 }
 .languageOptin{
     position:absolute;
@@ -121,7 +122,10 @@ margin-top: 170px;
     }
 }
 
-@media (max-width: 992px ) and (min-height: 768px) {
+@media (max-width: 992px ) {
+    .home-main{
+       height: auto;
+    }
     .home-content-m .white-degin-m{
         width: 595px;
         background-color: white;
