--- a/src/pages/reciept/index.css
+++ b/src/pages/reciept/index.css
@@ -124,7 +124,7 @@
   }
   .cardmain{
       position: relative;
-      /* display: flex; */
+      display: flex;
       /* justify-content: center;
       align-items: center; */
       margin-top: -2rem;
