--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -30,6 +30,9 @@
   text-align: center;
   padding: 19px;
 }
+.disable-color{
+  background-color: rgba(179, 179, 179, 0.553);
+}
 .modal-header {
   padding: 9px 14px 3px 52px !important;
   background: linear-gradient(180deg, #ffffff 0%, #d9d9d9 100%);
