--- a/src/pages/print-data/printdata.css
+++ b/src/pages/print-data/printdata.css
@@ -20,7 +20,7 @@
   }
   
   .item-list{
-    margin-top: 10px;
+    margin-top: 3px;
     display: flex;
     /* background-color: rgb(128, 125, 125); */
 }
@@ -58,7 +58,7 @@
 }
 .item-rate{
     margin-top: 1px;
-    margin-left: 18px;
+    margin-left: 14px;
     font-size: 4px;
     /* color: #FFF; */
     font-weight: bolder;
@@ -79,16 +79,16 @@
 }
 
 .amount-detail{
-    font-size: 7px;
+    font-size: 5px;
     margin-left: 0px;
 }
 .amount-data{
     margin-top: 5px;
 }
 .amount-final{
-    font-size: 7px;
-    margin-left: 113px;
-    margin-top: -140px;
+    font-size: 5px;
+    margin-left: 115px;
+    margin-top: -113px;
 }
     
 
@@ -119,4 +119,24 @@
     margin-left: 120px;
     font-size: 12px;
     margin-top: -18px;
+  }
+  .till-details{
+    display: flex;
+    flex-direction: column;
+    font-size: 10px;
+  }
+  .till-re{
+    margin-left: 5px;
+  }
+  .bill-re{
+    margin-top: -31px;
+    margin-left: 85px;
+  }
+  .store-re{
+    margin-top: 10px;
+    margin-left: 5px;
+  }
+  .cashiersid-re{
+    margin-top: -31px;
+    margin-left: 85px;
   }
