--- a/src/pages/register/index.css
+++ b/src/pages/register/index.css
@@ -77,7 +77,14 @@
   width: 100%;
   height: 205px;
 }
-
+.left-arrow{
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 4px;
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
 @media (max-width: 576px) {
   .circle {
     width: 100%;
